--- a/.github/md5.yml
+++ b/.github/md5.yml
@@ -614,6 +614,10 @@
   name: 24.png
   path: 文学作品和艺术创作/自传/一个阉人的真实故事/24.png
   md5: 88601511d2ffb092ce8b30cca6cf2911
+24_Transgender_in_China.pdf:
+  name: 24_Transgender_in_China.pdf
+  path: 学术文献/人文社科/24_Transgender_in_China.pdf
+  md5: 29efc0c7399d3e9705d1643d412725db
 25.png:
   name: 25.png
   path: 文学作品和艺术创作/自传/一个阉人的真实故事/25.png
@@ -762,10 +766,18 @@ AG手术后悔-网络害人.jpg:
   name: AG手术后悔-网络害人.jpg
   path: 文学作品和艺术创作/自传/AG手术后悔-网络害人.jpg
   md5: 15199ebc5eed9283733bbbb26da4a47e
+A_Sisterhood_of_Hope_How_Chinas_Transgender_Sex_Workers.pdf:
+  name: A_Sisterhood_of_Hope_How_Chinas_Transgender_Sex_Workers.pdf
+  path: 学术文献/人文社科/A_Sisterhood_of_Hope_How_Chinas_Transgender_Sex_Workers.pdf
+  md5: d6248fbe3f3b9ce6715dbaba2a361164
 ? A_cross-sectional_study_of_associations_between_casual_partner,_friend_discrimination,_social_support_and_anxiety_symptoms_among_Chinese_transgender_women.pdf
 : name: A_cross-sectional_study_of_associations_between_casual_partner,_friend_discrimination,_social_support_and_anxiety_symptoms_among_Chinese_transgender_women.pdf
   path: 学术文献/医学/A_cross-sectional_study_of_associations_between_casual_partner,_friend_discrimination,_social_support_and_anxiety_symptoms_among_Chinese_transgender_women.pdf
   md5: 00c6575d36cdb01e29ba99beeccc4b3c
+A_narrative_review_of_quantitative_research_s.pdf:
+  name: A_narrative_review_of_quantitative_research_s.pdf
+  path: 学术文献/人文社科/A_narrative_review_of_quantitative_research_s.pdf
+  md5: 5bb4e03f3e8a4b9245014bcd96814371
 ? Acceptability_of_Daily_Use_of_Free_Oral_Pre-exposure_Prophylaxis__PrEP__Among_Transgender_Women_Sex_Workers_in_Shenyang,_China.pdf
 : name: Acceptability_of_Daily_Use_of_Free_Oral_Pre-exposure_Prophylaxis__PrEP__Among_Transgender_Women_Sex_Workers_in_Shenyang,_China.pdf
   path: 学术文献/医学/Acceptability_of_Daily_Use_of_Free_Oral_Pre-exposure_Prophylaxis__PrEP__Among_Transgender_Women_Sex_Workers_in_Shenyang,_China.pdf
@@ -774,6 +786,10 @@ Advocate__Aurora__Health_有关提供服务时严禁歧视的通知.pdf:
   name: Advocate__Aurora__Health_有关提供服务时严禁歧视的通知.pdf
   path: 政府及官方组织文件/美国/Advocate__Aurora__Health_有关提供服务时严禁歧视的通知.pdf
   md5: 30c47658a9ccd6cbb3e8c46eaab4854a
+An_Exploration_of_Transgender_Individuals_Identity_Experiences_in_the_Chinese_Context.pdf:
+  name: An_Exploration_of_Transgender_Individuals_Identity_Experiences_in_the_Chinese_Context.pdf
+  path: 学术文献/人文社科/An_Exploration_of_Transgender_Individuals_Identity_Experiences_in_the_Chinese_Context.pdf
+  md5: eb76c665e7a2665e9aa277e1bbbda832
 CCDM3_中国精神障碍分类及诊断标准_全文（易性症在74页）.pdf:
   name: CCDM3_中国精神障碍分类及诊断标准_全文（易性症在74页）.pdf
   path: 学术文献/医学/CCDM3_中国精神障碍分类及诊断标准_全文（易性症在74页）.pdf
@@ -790,6 +806,22 @@ CareOregon_性别认定护理.pdf:
   name: CareOregon_性别认定护理.pdf
   path: 社群及NGO文件/其他组织文件/CareOregon_性别认定护理.pdf
   md5: 2b1bfef5b6e90b083013e76d91a6a905
+Castration_fever_On_trans_China_and_psychoanalysis.pdf:
+  name: Castration_fever_On_trans_China_and_psychoanalysis.pdf
+  path: 学术文献/人文社科/Castration_fever_On_trans_China_and_psychoanalysis.pdf
+  md5: b982209706837f6b8516835da841ca49
+Chinese_Trans_Women_in_Japan_and_Their_Embodied.pdf:
+  name: Chinese_Trans_Women_in_Japan_and_Their_Embodied.pdf
+  path: 学术文献/人文社科/Chinese_Trans_Women_in_Japan_and_Their_Embodied.pdf
+  md5: 492037c66b318924c1ed9ec0c0d55b20
+Chinese_Transgender_Population_General_Survey_Report.pdf:
+  name: Chinese_Transgender_Population_General_Survey_Report.pdf
+  path: 社群及NGO文件/统计报告/Chinese_Transgender_Population_General_Survey_Report.pdf
+  md5: 7de52daff2522563ea15fd1c4ad2c153
+Chinese_Transgender_Students_and_Teacher_Allies.pdf:
+  name: Chinese_Transgender_Students_and_Teacher_Allies.pdf
+  path: 学术文献/人文社科/Chinese_Transgender_Students_and_Teacher_Allies.pdf
+  md5: a4e264c1269169d2f2d59712629e057f
 Depth_psychotherapy_with_transgender_people.pdf:
   name: Depth_psychotherapy_with_transgender_people.pdf
   path: 学术文献/医学/Depth_psychotherapy_with_transgender_people.pdf
@@ -798,10 +830,18 @@ Dialnet-How_a_Chinese_Male-_to-Female_Manages_Gender_Nonconformity-7639547.pdf:
   name: Dialnet-How_a_Chinese_Male-_to-Female_Manages_Gender_Nonconformity-7639547.pdf
   path: 学术文献/人文社科/Dialnet-How_a_Chinese_Male-_to-Female_Manages_Gender_Nonconformity-7639547.pdf
   md5: 0c92a6ef9c6f61dc1d38c9012b3d1278
+Disclosure_of_Gender_Identity_among_Transgender_Individuals_to_Healthcare__Professionals_in_China.pdf:
+  name: Disclosure_of_Gender_Identity_among_Transgender_Individuals_to_Healthcare__Professionals_in_China.pdf
+  path: 学术文献/医学/Disclosure_of_Gender_Identity_among_Transgender_Individuals_to_Healthcare__Professionals_in_China.pdf
+  md5: aca06f70bddc0c7cf10ec5c5e4cebe31
 El_Dorado县健康教育课程.pdf:
   name: El_Dorado县健康教育课程.pdf
   path: 社群及NGO文件/医院和医疗体系/El_Dorado县健康教育课程.pdf
   md5: cde722fdf287cfdbcc6dd8883ba55dc2
+Excluded_lives_The_largest_scale_survey_on_the_social_and.pdf:
+  name: Excluded_lives_The_largest_scale_survey_on_the_social_and.pdf
+  path: 学术文献/人文社科/Excluded_lives_The_largest_scale_survey_on_the_social_and.pdf
+  md5: ead86d7ff2dee717b5f0b9cdaab38bbe
 FtM超处方用药现状-国外正规药物.pdf:
   name: FtM超处方用药现状-国外正规药物.pdf
   path: 社群及NGO文件/医院和医疗体系/FtM超处方用药现状-国外正规药物.pdf
@@ -822,14 +862,30 @@ HIV_and_syphilis_among_men_who_have_sex_with_men_and_transgender_individuals_in_
   name: HIV_and_syphilis_among_men_who_have_sex_with_men_and_transgender_individuals_in_China.pdf
   path: 学术文献/医学/HIV_and_syphilis_among_men_who_have_sex_with_men_and_transgender_individuals_in_China.pdf
   md5: 446827e8fd4168eeeabae840469cbbd3
+Hormone_overdose_and_misuse_in_Chinese_transgender.pdf:
+  name: Hormone_overdose_and_misuse_in_Chinese_transgender.pdf
+  path: 学术文献/医学/Hormone_overdose_and_misuse_in_Chinese_transgender.pdf
+  md5: 8ac82f54777296582730d011ccd466e0
+How_Chinas_Transgender_Sex_Workers_Cope_with_Intimate.pdf:
+  name: How_Chinas_Transgender_Sex_Workers_Cope_with_Intimate.pdf
+  path: 学术文献/医学/How_Chinas_Transgender_Sex_Workers_Cope_with_Intimate.pdf
+  md5: e78890b8e8b8486865a27c218b6755ba
 ICD_Gender_Incongruence_中文.docx:
   name: ICD_Gender_Incongruence_中文.docx
   path: 学术文献/医学/ICD_Gender_Incongruence_中文.docx
   md5: 09c3e440b51adcaf42da1c7b4896b8e6
+Imagining_Transgender_China.pdf:
+  name: Imagining_Transgender_China.pdf
+  path: 学术文献/人文社科/Imagining_Transgender_China.pdf
+  md5: ec7bb8020688377983b48a785201939a
 KS_故事-_克氏综合征.pdf:
   name: KS_故事-_克氏综合征.pdf
   path: 文学作品和艺术创作/纪实作品/KS_故事-_克氏综合征.pdf
   md5: 18b1dc0f000f562fccaf410f67e83e22
+LEGAL_GENDER_RECOGNITION_IN_CHINA_A_Legal_and_Policy_Review.pdf:
+  name: LEGAL_GENDER_RECOGNITION_IN_CHINA_A_Legal_and_Policy_Review.pdf
+  path: 学术文献/法律/LEGAL_GENDER_RECOGNITION_IN_CHINA_A_Legal_and_Policy_Review.pdf
+  md5: dc91e02be76e39ea9cbb6299bf8d6353
 LGBTQ+_老年人调查报告.pdf:
   name: LGBTQ+_老年人调查报告.pdf
   path: 社群及NGO文件/统计报告/LGBTQ+_老年人调查报告.pdf
@@ -866,10 +922,30 @@ MTF声音女性化手册.pdf:
   name: MTF声音女性化手册.pdf
   path: 社群及NGO文件/生活与性体验/伪声/MTF声音女性化手册.pdf
   md5: ec92a49e2a32626b918591a35121af00
+MY_LIFE_IS_TOO_DARK_TO_SEE_THE_LIGHT.pdf:
+  name: MY_LIFE_IS_TOO_DARK_TO_SEE_THE_LIGHT.pdf
+  path: 社群及NGO文件/统计报告/MY_LIFE_IS_TOO_DARK_TO_SEE_THE_LIGHT.pdf
+  md5: 40d905cb024539adbe263b540580fb94
+Mainland_Chinas_TERFs_Misogyny_Under_JK_Rowlings.pdf:
+  name: Mainland_Chinas_TERFs_Misogyny_Under_JK_Rowlings.pdf
+  path: 学术文献/人文社科/Mainland_Chinas_TERFs_Misogyny_Under_JK_Rowlings.pdf
+  md5: 3eda3e7b1a7b7d475388a3751145db23
+Minority_Stress_and_Mental_Health_among_Transgender_Persons.pdf:
+  name: Minority_Stress_and_Mental_Health_among_Transgender_Persons.pdf
+  path: 学术文献/医学/Minority_Stress_and_Mental_Health_among_Transgender_Persons.pdf
+  md5: 92f417bd524f7fb6e788a6fdc35cfcbb
 Mountain_Valley_Health_Plan_非歧视通知.pdf:
   name: Mountain_Valley_Health_Plan_非歧视通知.pdf
   path: 政府及官方组织文件/美国/Mountain_Valley_Health_Plan_非歧视通知.pdf
   md5: 80d42df88ad8bef65a244eb42d6a2820
+Necessity_of_facial_contouring_in_feminization_surgery_for.pdf:
+  name: Necessity_of_facial_contouring_in_feminization_surgery_for.pdf
+  path: 学术文献/医学/Necessity_of_facial_contouring_in_feminization_surgery_for.pdf
+  md5: 6f062840fc1f9b9dacb7d4e7c517326b
+PANDEMIC_OR_NOT_WE_HAVE_THE_RIGHT_TO_LIVE.pdf:
+  name: PANDEMIC_OR_NOT_WE_HAVE_THE_RIGHT_TO_LIVE.pdf
+  path: 学术文献/法律/PANDEMIC_OR_NOT_WE_HAVE_THE_RIGHT_TO_LIVE.pdf
+  md5: 086c569e140af0c867a5de8d18052266
 PC肌收缩分解教程.pdf:
   name: PC肌收缩分解教程.pdf
   path: 社群及NGO文件/生活与性体验/PC肌收缩分解教程.pdf
@@ -1058,6 +1134,10 @@ PDF_台灣率先導入性別光譜數位身分證突破傳統性別定義.pdf:
   name: PDF_台灣率先導入性別光譜數位身分證突破傳統性別定義.pdf
   path: 社群及NGO文件/社群讨论/港澳台/PDF_台灣率先導入性別光譜數位身分證突破傳統性別定義.pdf
   md5: 94ac3efa43abc4980e595d2f04f1754a
+PDF_台灣跨性別手術的最新進展.pdf:
+  name: PDF_台灣跨性別手術的最新進展.pdf
+  path: 杂志及新闻报道/港澳台/PDF_台灣跨性別手術的最新進展.pdf
+  md5: 2a82a5d8243079fd307eca70a8f1cf69
 PDF_司法的跃进与越界_-_反思香港终审法院之变性人结婚权案W_判例.pdf:
   name: PDF_司法的跃进与越界_-_反思香港终审法院之变性人结婚权案W_判例.pdf
   path: 学术文献/法律/PDF_司法的跃进与越界_-_反思香港终审法院之变性人结婚权案W_判例.pdf
@@ -1542,14 +1622,26 @@ PDF_香港醫院管理局就性別不安所提供的治療.pdf:
   name: PDF_香港醫院管理局就性別不安所提供的治療.pdf
   path: 政府及官方组织文件/港澳台/PDF_香港醫院管理局就性別不安所提供的治療.pdf
   md5: c62ebf96918ddc1e0086db4b179f4226
+Perceived_social_support_and_its_relationship_with.pdf:
+  name: Perceived_social_support_and_its_relationship_with.pdf
+  path: 学术文献/医学/Perceived_social_support_and_its_relationship_with.pdf
+  md5: 580c3e382ca55f58a44e7251fdad0b3e
 PridePlace_西雅图LGBTQIA+年长者住房信息_2023.pdf:
   name: PridePlace_西雅图LGBTQIA+年长者住房信息_2023.pdf
   path: 政府及官方组织文件/美国/PridePlace_西雅图LGBTQIA+年长者住房信息_2023.pdf
   md5: 007b3e5220bb29fd51a2f1067e76c16e
+Public_Support_for_Transgender_Rights_A_Twenty-three.pdf:
+  name: Public_Support_for_Transgender_Rights_A_Twenty-three.pdf
+  path: 学术文献/人文社科/Public_Support_for_Transgender_Rights_A_Twenty-three.pdf
+  md5: 30c7d99834d43fd308d7ed931731aa2a
 Puckett_et_al._-_2019_-_Mental_health_and_resilience_in_transgender_indivi.pdf:
   name: Puckett_et_al._-_2019_-_Mental_health_and_resilience_in_transgender_indivi.pdf
   path: 学术文献/医学/Puckett_et_al._-_2019_-_Mental_health_and_resilience_in_transgender_indivi.pdf
   md5: 1ca8254433fb130660560530002b876f
+Reading_Transgender_Narratives_in_Late_Imperial_China_by.pdf:
+  name: Reading_Transgender_Narratives_in_Late_Imperial_China_by.pdf
+  path: 学术文献/人文社科/Reading_Transgender_Narratives_in_Late_Imperial_China_by.pdf
+  md5: 9b1a6ba9a723648db068ad593b20fa43
 ? Recommendations_for_Revision_of_the_DSM_Diagnoses_of_Gender_Identity_Disorders_Consensus_Statement_of_the_World_Professional_Association_for.pdf
 : name: Recommendations_for_Revision_of_the_DSM_Diagnoses_of_Gender_Identity_Disorders_Consensus_Statement_of_the_World_Professional_Association_for.pdf
   path: 学术文献/医学/Recommendations_for_Revision_of_the_DSM_Diagnoses_of_Gender_Identity_Disorders_Consensus_Statement_of_the_World_Professional_Association_for.pdf
@@ -1590,10 +1682,18 @@ SOGIE_Report_-_Being_LGBTI_in_China.pdf:
   name: SOGIE_Report_-_Being_LGBTI_in_China.pdf
   path: 社群及NGO文件/统计报告/SOGIE_Report_-_Being_LGBTI_in_China.pdf
   md5: f2040145cb36b87d068f47f590cf5c62
+Sex_Partnership_and_Self-Efficacy_Influence_Depression_in__Chinese_Transgender_Women.pdf:
+  name: Sex_Partnership_and_Self-Efficacy_Influence_Depression_in__Chinese_Transgender_Women.pdf
+  path: 学术文献/医学/Sex_Partnership_and_Self-Efficacy_Influence_Depression_in__Chinese_Transgender_Women.pdf
+  md5: d5b4daae22b951a0a518ecd34aa1eac3
 Suicidal_ideation_and_attempted_suicide_amongst_Chinese_.pdf:
   name: Suicidal_ideation_and_attempted_suicide_amongst_Chinese_.pdf
   path: 学术文献/人文社科/Suicidal_ideation_and_attempted_suicide_amongst_Chinese_.pdf
   md5: 545ef5a3fd70679294758615e5f79a57
+Suicidal_ideation_and_attempted_suicide_amongst_Chinese_transgender.pdf:
+  name: Suicidal_ideation_and_attempted_suicide_amongst_Chinese_transgender.pdf
+  path: 学术文献/医学/Suicidal_ideation_and_attempted_suicide_amongst_Chinese_transgender.pdf
+  md5: f576282f52e27838fe5643519b42e006
 Super-O个人体验整理分享.docx:
   name: Super-O个人体验整理分享.docx
   path: 社群及NGO文件/生活与性体验/前列腺高潮/Super-O个人体验整理分享.docx
@@ -1614,6 +1714,14 @@ TERF问答.docx:
   name: TERF问答.docx
   path: 社群及NGO文件/社群讨论/中国大陆/TERF问答.docx
   md5: 59704420f23c08dada7d4e148c0d0876
+TG_transgender_GNC_gender_non-conforming.pdf:
+  name: TG_transgender_GNC_gender_non-conforming.pdf
+  path: 学术文献/人文社科/TG_transgender_GNC_gender_non-conforming.pdf
+  md5: df67f5727f15b8fc2c4ecdccc87b39ff
+TRANS_PEOPLE_AND_TRANS_COMMUNITIES_IN_ASIA.pdf:
+  name: TRANS_PEOPLE_AND_TRANS_COMMUNITIES_IN_ASIA.pdf
+  path: 政府及官方组织文件/联合国/TRANS_PEOPLE_AND_TRANS_COMMUNITIES_IN_ASIA.pdf
+  md5: eeb20b8899907269513a6396bdb6f59d
 T_S_W简报09_跨性别性工作者的需求与权利.pdf:
   name: T_S_W简报09_跨性别性工作者的需求与权利.pdf
   path: 社群及NGO文件/统计报告/T_S_W简报09_跨性别性工作者的需求与权利.pdf
@@ -1626,6 +1734,14 @@ The_Case_Against_Autogynephilia_驳AG_论.pdf:
   name: The_Case_Against_Autogynephilia_驳AG_论.pdf
   path: 学术文献/人文社科/The_Case_Against_Autogynephilia_驳AG_论.pdf
   md5: 072c37bbc1dfebc71a39d27f2c1c508b
+The_Negative_Influence_of_Social_Media_on_Transgender_Group_Self-identity_in_The_East_Asian__Society.pdf:
+  name: The_Negative_Influence_of_Social_Media_on_Transgender_Group_Self-identity_in_The_East_Asian__Society.pdf
+  path: 学术文献/人文社科/The_Negative_Influence_of_Social_Media_on_Transgender_Group_Self-identity_in_The_East_Asian__Society.pdf
+  md5: 53e467dba9e38e299fbfc448595c5fde
+The_Protection_of_Transgender_Workers_in_China.pdf:
+  name: The_Protection_of_Transgender_Workers_in_China.pdf
+  path: 学术文献/法律/The_Protection_of_Transgender_Workers_in_China.pdf
+  md5: aeb2c53afd55c8f9761fa5d593f362c8
 The__Slow__Depathologizing_of_Gender_Incongruence.11.pdf:
   name: The__Slow__Depathologizing_of_Gender_Incongruence.11.pdf
   path: 学术文献/人文社科/The__Slow__Depathologizing_of_Gender_Incongruence.11.pdf
@@ -1634,6 +1750,14 @@ The__Slow__Depathologizing_of_Gender_Incongruence.11.pdf:
 : name: The_de_politicization_of_pronouns_implications_of_the_No_Big_Deal_Campaign_for_gender_expansive_educational_policy_and_practice.pdf
   path: 学术文献/人文社科/The_de_politicization_of_pronouns_implications_of_the_No_Big_Deal_Campaign_for_gender_expansive_educational_policy_and_practice.pdf
   md5: 3bb50299cb411ce718535f3104653f28
+The_relationship_between_non-suicidal_self-injury_and_childhood_abuse_in_transgender_people.pdf:
+  name: The_relationship_between_non-suicidal_self-injury_and_childhood_abuse_in_transgender_people.pdf
+  path: 学术文献/医学/The_relationship_between_non-suicidal_self-injury_and_childhood_abuse_in_transgender_people.pdf
+  md5: d91bdb6f05f0e95ad09f57e78da8b017
+Trans-in-Asia_Asia-in-Trans.pdf:
+  name: Trans-in-Asia_Asia-in-Trans.pdf
+  path: 学术文献/人文社科/Trans-in-Asia_Asia-in-Trans.pdf
+  md5: bb6a1471fb8748915c1e98980704d04d
 Transgender_Inmates_in_Prisons.pdf:
   name: Transgender_Inmates_in_Prisons.pdf
   path: 学术文献/人文社科/Transgender_Inmates_in_Prisons.pdf
@@ -1666,6 +1790,10 @@ WPATH_SOC_V7.pdf:
   name: WPATH_SOC_V7.pdf
   path: 社群及NGO文件/手册指南/WPATH_SOC_V7.pdf
   md5: b9ed2f347e493da7dd9c2c4fb4040ee5
+Workplace_Experiences_of_Transgender_Individuals.pdf:
+  name: Workplace_Experiences_of_Transgender_Individuals.pdf
+  path: 学术文献/人文社科/Workplace_Experiences_of_Transgender_Individuals.pdf
+  md5: d977a2aa45a3f521da6ba0c5cd3f015c
 _其他__说好的论文，论变身小说的两种流派.txt:
   name: _其他__说好的论文，论变身小说的两种流派.txt
   path: 文学作品和艺术创作/小说/_其他__说好的论文，论变身小说的两种流派.txt
@@ -1694,6 +1822,14 @@ shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf:
   name: shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf
   path: 社群及NGO文件/手册指南/shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf
   md5: 0bbda2f17bb900152f398023f050d8d1
+transgender_peoples_right_to_marry_in_vietnam_and_other.pdf:
+  name: transgender_peoples_right_to_marry_in_vietnam_and_other.pdf
+  path: 学术文献/法律/transgender_peoples_right_to_marry_in_vietnam_and_other.pdf
+  md5: 52712977340b4f80284e8fd7a5e967ee
+transgender_performance_in_contemporary_Chinese_films.pdf:
+  name: transgender_performance_in_contemporary_Chinese_films.pdf
+  path: 学术文献/人文社科/transgender_performance_in_contemporary_Chinese_films.pdf
+  md5: cae1a481460d6da7a5b75f4e49010b4b
 “伪娘”亚文化现象的美学解读_高妍.pdf:
   name: “伪娘”亚文化现象的美学解读_高妍.pdf
   path: 学术文献/人文社科/“伪娘”亚文化现象的美学解读_高妍.pdf
@@ -2026,6 +2162,10 @@ shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf:
   name: 住房歧视保护与LGBTQ+权益.pdf
   path: 政府及官方组织文件/美国/住房歧视保护与LGBTQ+权益.pdf
   md5: afba9039023e1681ab275adb74864ba4
+住錯性別身體的靈魂-人權全紀錄.pdf:
+  name: 住錯性別身體的靈魂-人權全紀錄.pdf
+  path: 杂志及新闻报道/港澳台/住錯性別身體的靈魂-人權全紀錄.pdf
+  md5: f6861d402f7e29fd2ab3bcdc9f72d9e6
 住錯性別身體的靈魂-跨性別與人權保護.pdf:
   name: 住錯性別身體的靈魂-跨性別與人權保護.pdf
   path: 学术文献/人文社科/住錯性別身體的靈魂-跨性別與人權保護.pdf
@@ -2102,6 +2242,10 @@ shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf:
   name: 兒童及青少年性別不安文獻回顧.pdf
   path: 学术文献/医学/兒童及青少年性別不安文獻回顧.pdf
   md5: aafdedd9d20f57dc33f8ee9139067e8c
+內政部研商性別變更認定及登記程序.pdf:
+  name: 內政部研商性別變更認定及登記程序.pdf
+  path: 政府及官方组织文件/港澳台/內政部研商性別變更認定及登記程序.pdf
+  md5: 457ae987a39f9fccbc96b2428f01362f
 全国心理援助热线机构联系信息心理服务与援助机构.pdf:
   name: 全国心理援助热线机构联系信息心理服务与援助机构.pdf
   path: 社群及NGO文件/其他组织文件/全国心理援助热线机构联系信息心理服务与援助机构.pdf
@@ -2830,6 +2974,10 @@ shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf:
   name: 性別認同及雙性人身份歧視的研究報告.pdf
   path: 学术文献/法律/性別認同及雙性人身份歧視的研究報告.pdf
   md5: 7890d14027256444f7e33a327bc34e59
+性別變更戶政法令研討及案例分享.pdf:
+  name: 性別變更戶政法令研討及案例分享.pdf
+  path: 政府及官方组织文件/港澳台/性別變更戶政法令研討及案例分享.pdf
+  md5: 3f060beb6bbe7d0033841cc4d0a50429
 性别不一致去精神病化的思考.pdf:
   name: 性别不一致去精神病化的思考.pdf
   path: 学术文献/医学/性别不一致去精神病化的思考.pdf
@@ -3106,6 +3254,10 @@ shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf:
   name: 易性癖的外科治疗进展_章建林.pdf
   path: 学术文献/医学/易性癖的外科治疗进展_章建林.pdf
   md5: 5b029398d273c58e55f93f145567eebd
+易性癖诊治前后的几点思考.pdf:
+  name: 易性癖诊治前后的几点思考.pdf
+  path: 学术文献/医学/易性癖诊治前后的几点思考.pdf
+  md5: ab363d819dc22b6309d08dbc9961447c
 是非男女-1.pdf:
   name: 是非男女-1.pdf
   path: 社群及NGO文件/手册指南/是非男女-1.pdf
