--- a/.github/templates/page.md.template
+++ b/.github/templates/page.md.template
@@ -1,7 +1,7 @@
 # {name}
 
 <!-- tcd_download_link -->
-Download: [{filename}]({filename})
+下载: [{filename}]({filename})
 <!-- tcd_download_link_end -->
 
 ## 摘要
