--- a/学术文献/人文社科/config.yml
+++ b/学术文献/人文社科/config.yml
@@ -136,6 +136,55 @@ files:
   size: 1586496
   md5: 426fa248f85f5a143a14d00f0274e917
   page: 2023_廖昱凱_酷兒跨性別生態學與河川正義書評_page.md
+- name: 24_Transgender_in_China
+  filename: 24_Transgender_in_China.pdf
+  type: document
+  format: PDF Document
+  size: 245858
+  md5: 29efc0c7399d3e9705d1643d412725db
+  page: 24_Transgender_in_China_page.md
+- name: A_Sisterhood_of_Hope_How_Chinas_Transgender_Sex_Workers
+  filename: A_Sisterhood_of_Hope_How_Chinas_Transgender_Sex_Workers.pdf
+  type: document
+  format: PDF Document
+  size: 427885
+  md5: d6248fbe3f3b9ce6715dbaba2a361164
+  page: A_Sisterhood_of_Hope_How_Chinas_Transgender_Sex_Workers_page.md
+- name: A_narrative_review_of_quantitative_research_s
+  filename: A_narrative_review_of_quantitative_research_s.pdf
+  type: document
+  format: PDF Document
+  size: 1150629
+  md5: 5bb4e03f3e8a4b9245014bcd96814371
+  page: A_narrative_review_of_quantitative_research_s_page.md
+- name: An_Exploration_of_Transgender_Individuals_Identity_Experiences_in_the_Chinese_Context
+  filename: An_Exploration_of_Transgender_Individuals_Identity_Experiences_in_the_Chinese_Context.pdf
+  type: document
+  format: PDF Document
+  size: 1740803
+  md5: eb76c665e7a2665e9aa277e1bbbda832
+  page: An_Exploration_of_Transgender_Individuals_Identity_Experiences_in_the_Chinese_Context_page.md
+- name: Castration_fever_On_trans_China_and_psychoanalysis
+  filename: Castration_fever_On_trans_China_and_psychoanalysis.pdf
+  type: document
+  format: PDF Document
+  size: 255484
+  md5: b982209706837f6b8516835da841ca49
+  page: Castration_fever_On_trans_China_and_psychoanalysis_page.md
+- name: Chinese_Trans_Women_in_Japan_and_Their_Embodied
+  filename: Chinese_Trans_Women_in_Japan_and_Their_Embodied.pdf
+  type: document
+  format: PDF Document
+  size: 732627
+  md5: 492037c66b318924c1ed9ec0c0d55b20
+  page: Chinese_Trans_Women_in_Japan_and_Their_Embodied_page.md
+- name: Chinese_Transgender_Students_and_Teacher_Allies
+  filename: Chinese_Transgender_Students_and_Teacher_Allies.pdf
+  type: document
+  format: PDF Document
+  size: 208311
+  md5: a4e264c1269169d2f2d59712629e057f
+  page: Chinese_Transgender_Students_and_Teacher_Allies_page.md
 - name: Dialnet-How_a_Chinese_Male-_to-Female_Manages_Gender_Nonconformity-7639547
   filename: Dialnet-How_a_Chinese_Male-_to-Female_Manages_Gender_Nonconformity-7639547.pdf
   type: document
@@ -143,6 +192,20 @@ files:
   size: 520427
   md5: 0c92a6ef9c6f61dc1d38c9012b3d1278
   page: Dialnet-How_a_Chinese_Male-_to-Female_Manages_Gender_Nonconformity-7639547_page.md
+- name: Excluded_lives_The_largest_scale_survey_on_the_social_and
+  filename: Excluded_lives_The_largest_scale_survey_on_the_social_and.pdf
+  type: document
+  format: PDF Document
+  size: 183467
+  md5: ead86d7ff2dee717b5f0b9cdaab38bbe
+  page: Excluded_lives_The_largest_scale_survey_on_the_social_and_page.md
+- name: Imagining_Transgender_China
+  filename: Imagining_Transgender_China.pdf
+  type: document
+  format: PDF Document
+  size: 362121
+  md5: ec7bb8020688377983b48a785201939a
+  page: Imagining_Transgender_China_page.md
 - name: LGBTQI+抗争中的双语表达_2023_ANU_Press
   filename: LGBTQI+抗争中的双语表达_2023_ANU_Press.pdf
   type: document
@@ -150,6 +213,13 @@ files:
   size: 579642
   md5: ac904f27a881886d5fbae9614ad089bb
   page: LGBTQI+抗争中的双语表达_2023_ANU_Press_page.md
+- name: Mainland_Chinas_TERFs_Misogyny_Under_JK_Rowlings
+  filename: Mainland_Chinas_TERFs_Misogyny_Under_JK_Rowlings.pdf
+  type: document
+  format: PDF Document
+  size: 591141
+  md5: 3eda3e7b1a7b7d475388a3751145db23
+  page: Mainland_Chinas_TERFs_Misogyny_Under_JK_Rowlings_page.md
 - name: PDF_为基于性别的暴力绘制人道干预新途径
   filename: PDF_为基于性别的暴力绘制人道干预新途径.pdf
   type: document
@@ -423,6 +493,20 @@ files:
   size: 1009612
   md5: cebcf158f4e50a9e87c1284404a98c54
   page: PDF_香港跨性別社群發展與歧視個案研究_page.md
+- name: Public_Support_for_Transgender_Rights_A_Twenty-three
+  filename: Public_Support_for_Transgender_Rights_A_Twenty-three.pdf
+  type: document
+  format: PDF Document
+  size: 1179265
+  md5: 30c7d99834d43fd308d7ed931731aa2a
+  page: Public_Support_for_Transgender_Rights_A_Twenty-three_page.md
+- name: Reading_Transgender_Narratives_in_Late_Imperial_China_by
+  filename: Reading_Transgender_Narratives_in_Late_Imperial_China_by.pdf
+  type: document
+  format: PDF Document
+  size: 4905725
+  md5: 9b1a6ba9a723648db068ad593b20fa43
+  page: Reading_Transgender_Narratives_in_Late_Imperial_China_by_page.md
 - name: Suicidal_ideation_and_attempted_suicide_amongst_Chinese_
   filename: Suicidal_ideation_and_attempted_suicide_amongst_Chinese_.pdf
   type: document
@@ -451,6 +535,13 @@ files:
   size: 224792
   md5: 612cb477ae54c52775e0051bb3ad2dac
   page: Synergies_in_health_and_human_rights_-_a_call_to_action_to_improve_transgender_health_page.md
+- name: TG_transgender_GNC_gender_non-conforming
+  filename: TG_transgender_GNC_gender_non-conforming.pdf
+  type: document
+  format: PDF Document
+  size: 60104479
+  md5: df67f5727f15b8fc2c4ecdccc87b39ff
+  page: TG_transgender_GNC_gender_non-conforming_page.md
 - name: The_Bathroom_Case_Creating_a_Supportive_School__Environment_for_Transgender__and_Gender_Nonconforming__Students
   filename: The_Bathroom_Case_Creating_a_Supportive_School__Environment_for_Transgender__and_Gender_Nonconforming__Students.pdf
   type: document
@@ -465,6 +556,13 @@ files:
   size: 577189
   md5: 072c37bbc1dfebc71a39d27f2c1c508b
   page: The_Case_Against_Autogynephilia_驳AG_论_page.md
+- name: The_Negative_Influence_of_Social_Media_on_Transgender_Group_Self-identity_in_The_East_Asian__Society
+  filename: The_Negative_Influence_of_Social_Media_on_Transgender_Group_Self-identity_in_The_East_Asian__Society.pdf
+  type: document
+  format: PDF Document
+  size: 312588
+  md5: 53e467dba9e38e299fbfc448595c5fde
+  page: The_Negative_Influence_of_Social_Media_on_Transgender_Group_Self-identity_in_The_East_Asian__Society_page.md
 - name: The__Slow__Depathologizing_of_Gender_Incongruence.11
   filename: The__Slow__Depathologizing_of_Gender_Incongruence.11.pdf
   type: document
@@ -479,6 +577,13 @@ files:
   size: 2082573
   md5: 3bb50299cb411ce718535f3104653f28
   page: The_de_politicization_of_pronouns_implications_of_the_No_Big_Deal_Campaign_for_gender_expansive_educational_policy_and_practice_page.md
+- name: Trans-in-Asia_Asia-in-Trans
+  filename: Trans-in-Asia_Asia-in-Trans.pdf
+  type: document
+  format: PDF Document
+  size: 213244
+  md5: bb6a1471fb8748915c1e98980704d04d
+  page: Trans-in-Asia_Asia-in-Trans_page.md
 - name: Transgender_Inmates_in_Prisons
   filename: Transgender_Inmates_in_Prisons.pdf
   type: document
@@ -528,6 +633,20 @@ files:
   size: 411303
   md5: fe8159eec4bd712eacf6ca3706f0f804
   page: Transgender_people:_health_at_the_margins_of_society_-_Winter_et_al-2016_page.md
+- name: Workplace_Experiences_of_Transgender_Individuals
+  filename: Workplace_Experiences_of_Transgender_Individuals.pdf
+  type: document
+  format: PDF Document
+  size: 817749
+  md5: d977a2aa45a3f521da6ba0c5cd3f015c
+  page: Workplace_Experiences_of_Transgender_Individuals_page.md
+- name: transgender_performance_in_contemporary_Chinese_films
+  filename: transgender_performance_in_contemporary_Chinese_films.pdf
+  type: document
+  format: PDF Document
+  size: 264318
+  md5: cae1a481460d6da7a5b75f4e49010b4b
+  page: transgender_performance_in_contemporary_Chinese_films_page.md
 - name: “伪娘”亚文化现象的美学解读_高妍
   filename: “伪娘”亚文化现象的美学解读_高妍.pdf
   type: document
