--- a/学术文献/医学/config.yml
+++ b/学术文献/医学/config.yml
@@ -136,6 +136,13 @@ files:
   size: 249774
   md5: 9d934b398276fdf6b83547bdd8ce83e3
   page: Depth_psychotherapy_with_transgender_people_page.md
+- name: Disclosure_of_Gender_Identity_among_Transgender_Individuals_to_Healthcare__Professionals_in_China
+  filename: Disclosure_of_Gender_Identity_among_Transgender_Individuals_to_Healthcare__Professionals_in_China.pdf
+  type: document
+  format: PDF Document
+  size: 124942
+  md5: aca06f70bddc0c7cf10ec5c5e4cebe31
+  page: Disclosure_of_Gender_Identity_among_Transgender_Individuals_to_Healthcare__Professionals_in_China_page.md
 - name: HIV_and_syphilis_among_men_who_have_sex_with_men_and_transgender_individuals_in_China
   filename: HIV_and_syphilis_among_men_who_have_sex_with_men_and_transgender_individuals_in_China.pdf
   type: document
@@ -143,6 +150,20 @@ files:
   size: 55616
   md5: 446827e8fd4168eeeabae840469cbbd3
   page: HIV_and_syphilis_among_men_who_have_sex_with_men_and_transgender_individuals_in_China_page.md
+- name: Hormone_overdose_and_misuse_in_Chinese_transgender
+  filename: Hormone_overdose_and_misuse_in_Chinese_transgender.pdf
+  type: document
+  format: PDF Document
+  size: 665698
+  md5: 8ac82f54777296582730d011ccd466e0
+  page: Hormone_overdose_and_misuse_in_Chinese_transgender_page.md
+- name: How_Chinas_Transgender_Sex_Workers_Cope_with_Intimate
+  filename: How_Chinas_Transgender_Sex_Workers_Cope_with_Intimate.pdf
+  type: document
+  format: PDF Document
+  size: 331268
+  md5: e78890b8e8b8486865a27c218b6755ba
+  page: How_Chinas_Transgender_Sex_Workers_Cope_with_Intimate_page.md
 - name: ICD_Gender_Incongruence_中文
   filename: ICD_Gender_Incongruence_中文.docx
   type: document
@@ -150,6 +171,20 @@ files:
   size: 124312
   md5: 09c3e440b51adcaf42da1c7b4896b8e6
   page: ICD_Gender_Incongruence_中文_page.md
+- name: Minority_Stress_and_Mental_Health_among_Transgender_Persons
+  filename: Minority_Stress_and_Mental_Health_among_Transgender_Persons.pdf
+  type: document
+  format: PDF Document
+  size: 1570952
+  md5: 92f417bd524f7fb6e788a6fdc35cfcbb
+  page: Minority_Stress_and_Mental_Health_among_Transgender_Persons_page.md
+- name: Necessity_of_facial_contouring_in_feminization_surgery_for
+  filename: Necessity_of_facial_contouring_in_feminization_surgery_for.pdf
+  type: document
+  format: PDF Document
+  size: 2980046
+  md5: 6f062840fc1f9b9dacb7d4e7c517326b
+  page: Necessity_of_facial_contouring_in_feminization_surgery_for_page.md
 - name: PDF_2018年男同性戀雙性戀及跨性別女性的精神健康
   filename: PDF_2018年男同性戀雙性戀及跨性別女性的精神健康.pdf
   type: document
@@ -304,6 +339,13 @@ files:
   size: 801546
   md5: fd5ea16728fe0648cdafd1ed6557a99d
   page: PDF_香港愛滋病情況概覽-跨性別人士_page.md
+- name: Perceived_social_support_and_its_relationship_with
+  filename: Perceived_social_support_and_its_relationship_with.pdf
+  type: document
+  format: PDF Document
+  size: 120331
+  md5: 580c3e382ca55f58a44e7251fdad0b3e
+  page: Perceived_social_support_and_its_relationship_with_page.md
 - name: Puckett_et_al._-_2019_-_Mental_health_and_resilience_in_transgender_indivi
   filename: Puckett_et_al._-_2019_-_Mental_health_and_resilience_in_transgender_indivi.pdf
   type: document
@@ -339,6 +381,27 @@ files:
   size: 117906
   md5: 95b53cd236453c70f73d77b08bcfdf65
   page: Russell_et_al._-_2018_-_Chosen_Name_Use_Is_Linked_to_Reduced_Depressive_Sy_page.md
+- name: Sex_Partnership_and_Self-Efficacy_Influence_Depression_in__Chinese_Transgender_Women
+  filename: Sex_Partnership_and_Self-Efficacy_Influence_Depression_in__Chinese_Transgender_Women.pdf
+  type: document
+  format: PDF Document
+  size: 241284
+  md5: d5b4daae22b951a0a518ecd34aa1eac3
+  page: Sex_Partnership_and_Self-Efficacy_Influence_Depression_in__Chinese_Transgender_Women_page.md
+- name: Suicidal_ideation_and_attempted_suicide_amongst_Chinese_transgender
+  filename: Suicidal_ideation_and_attempted_suicide_amongst_Chinese_transgender.pdf
+  type: document
+  format: PDF Document
+  size: 756636
+  md5: f576282f52e27838fe5643519b42e006
+  page: Suicidal_ideation_and_attempted_suicide_amongst_Chinese_transgender_page.md
+- name: The_relationship_between_non-suicidal_self-injury_and_childhood_abuse_in_transgender_people
+  filename: The_relationship_between_non-suicidal_self-injury_and_childhood_abuse_in_transgender_people.pdf
+  type: document
+  format: PDF Document
+  size: 508808
+  md5: d91bdb6f05f0e95ad09f57e78da8b017
+  page: The_relationship_between_non-suicidal_self-injury_and_childhood_abuse_in_transgender_people_page.md
 - name: hormones_MTF
   filename: hormones_MTF.pdf
   type: document
@@ -682,6 +745,13 @@ files:
   size: 102237
   md5: 5b029398d273c58e55f93f145567eebd
   page: 易性癖的外科治疗进展_章建林_page.md
+- name: 易性癖诊治前后的几点思考
+  filename: 易性癖诊治前后的几点思考.pdf
+  type: document
+  format: PDF Document
+  size: 297283
+  md5: ab363d819dc22b6309d08dbc9961447c
+  page: 易性癖诊治前后的几点思考_page.md
 - name: 本港男跨女跨性別人士艾滋病疫情回顧
   filename: 本港男跨女跨性別人士艾滋病疫情回顧.pdf
   type: document
