--- a/.github/visit_links.yml
+++ b/.github/visit_links.yml
@@ -8330,6 +8330,11 @@
     光是今年七月新番里面，就 ...
   title: 女装大佬们的逆袭——你发现最近动画女装大佬越来越多了吗？ - 搜狐
   visited_date: '2024-11-07 03:45:59'
+411b30ecef00e9a83e6dc19238e51265:
+  link: https://m.douban.com/note/705308799/
+  snippet: Jan 29, 2019 — 跨性别者（下） 跨性别一般可以被分为TS、TG、CD、AG ... AG，又称为幻想变性性兴奋理论，指的是通过幻想自己是另一性别而获得性唤起的一类人。
+  title: 跨性别者（下） - 日记- 豆瓣
+  visited_date: '2025-01-14 08:58:36'
 41230f0a306a74c57290cf54c98cc0cf:
   link: http://www.qhnews.com/index/system/2014/07/28/011466032.shtml
   snippet: Jul 28, 2014 — 近日，泰国最美人妖Poyd在微博上发布了一组照片，晒出周润发与他在《赌城风云2》片场的合影照，只见发哥精神气爽，气色不错，其中，Poyd除了以泰文表示很
@@ -13622,6 +13627,12 @@
     有人会认为他们是 ...
   title: 伊娃和阿黛尔
   visited_date: '2024-11-02 02:44:37'
+69be4a0e920fe8e3f83cb372b799662c:
+  link: https://www.kingsresearch.com/zh/hormone-replacement-therapy-market-911
+  snippet: 激素替代疗法（HRT）是指补充或替代身体不再产生足够数量的激素的医学治疗。它通常用于缓解荷尔蒙失衡引起的症状，例如女性更年期或男性更年期期间经历的症状。
+    HRT 涉及通过 ...
+  title: 激素替代疗法市场规模报告[2031] - Kings Research
+  visited_date: '2025-01-14 08:57:24'
 69c057c14c2ced63790e692871c19a2f:
   link: http://ydc007.blog.sohu.com/88842205.html
   snippet: May 30, 2008 — 泰国人妖是一个神秘的人群，是泰国特有的现象。一般是由容貌漂亮、身材窈窕的少年男子。经过使用激素等特殊手段，变成能献媚观众的“美女”。人妖娇艳无比，能
@@ -22367,6 +22378,12 @@ ab12457bfe390721d7e04d5aa087f2a6:
     图书馆合作 · 移动应用 ...
   title: 《性别是条毛毛虫》试读：哪个逃犯？或者，谁是那个蒙面人？
   visited_date: '2024-11-11 20:53:38'
+ab16b0b3f6e76d1eae280fd0d1ed7a49:
+  link: https://tkutimes.tku.edu.tw/dtl.aspx?no=53377
+  snippet: Apr 05, 2021 — Alizabeth娘娘是來自泰國的跨性別者，她用笑聲感染全場氣氛，以自己的故事娓娓道來。她說泰國仍然有嚴重的性別不平等的問題，她舉例「去年泰國國小考題為洗
+    ...
+  title: Alizabeth娘娘談與眾不同建構自我認同 - 淡江時報
+  visited_date: '2025-01-14 08:58:00'
 ab1d1b4db8dbb77e87952f29d48492da:
   link: https://news.ifeng.com/world/201001/0115_16_1512304.shtml
   snippet: 2010年01月15日15:33中广网【大 中 小】 【打印】 共有评论0条. 日本伪娘—未莉. 日本伪娘 ... 据日本共同社报道，最近在日本年轻男性中正在兴起一种男扮女装的“伪娘”热
@@ -23207,6 +23224,12 @@ b299ceb9e764ac5f2b9087f539422229:
     他是中国第一个变性人，长相漂亮，丈夫至死不知其真实身份.
   title: 变性人_标签 - 网易娱乐
   visited_date: '2024-11-22 08:04:04'
+b29f316f72b9e13d36d5487c2bc4e5de:
+  link: https://context.reverso.net/traduccion/chino-espanol/%E4%B8%A4%E6%80%A7%E4%BA%BA
+  snippet: 两性人和变性人的学生举出受欺凌是他们从国立小学 ... 它对在2010年设立全国男、女同性恋者、两性人和变性 ... 两性人、老年人、残疾人、土著人和少数民族人民
+    ...
+  title: 两性人- Traducción al español - ejemplos chino | Reverso Context
+  visited_date: '2025-01-14 08:59:27'
 b2a655d7b0cc99d57b253ec7778c0d0b:
   link: http://star.news.sohu.com/20121122/n358342158.shtml
   snippet: Nov 22, 2012 — 大部分跨性别者都是通过服用激素来改变自己的性征，少部分人有条件做变性手术，由于激素属于处方药，不少人通过私自在网上或者黑市买药，对于剂量和用法也缺乏
