增加两个关于变身小说分析的知乎文章

--- a/.github/md5.yml
+++ b/.github/md5.yml
@@ -2334,6 +2334,14 @@ transgender_performance_in_contemporary_Chinese_films.pdf:
   name: 初次前高体验分享.docx
   path: 社群及NGO文件/生活与性体验/前列腺高潮/初次前高体验分享.docx
   md5: 08760159600946cb00e65d80c01a2612
+别样的天空（上）——变身小说精品推荐.md:
+  name: 别样的天空（上）——变身小说精品推荐.md
+  path: 文学作品和艺术创作/小说/别样的天空（上）——变身小说精品推荐.md
+  md5: 7b5a0c323c8b715d85b7022fbd4741c3
+别样的天空（下）——什么才是“变身小说”？.md:
+  name: 别样的天空（下）——什么才是“变身小说”？.md
+  path: 文学作品和艺术创作/小说/别样的天空（下）——什么才是“变身小说”？.md
+  md5: 928e19b0c2e7b8107db43417db334923
 前列腺高潮教程.jpg:
   name: 前列腺高潮教程.jpg
   path: 社群及NGO文件/生活与性体验/前列腺高潮/前列腺高潮教程.jpg
