--- a/.github/templates/README.md.template
+++ b/.github/templates/README.md.template
@@ -32,6 +32,8 @@
 
 只要与中文多元性别相关，我们都欢迎被收录。多元性别不仅涵盖跨性别（如 MTF、FTM），也涉及任何社会或生理性别特征、性别认同不符合常规二元性别划分的人群，包括但不限于 CDTS、伪娘、男娘、MTX、MTE、间性人等。
 
+我们认为每个人在性倾向、性别身份、性别表达等方面享有平等的选择权，不受污名、歧视和暴力。我们强烈反对错误，歧视和污名化的内容，但出于科研完整性的目标，我们会对此加以收录并尽可能进一步标注。「这是历史的一部分」
+
 具体而言，包括：
 
 - 多元性别者的生命故事与过渡经历（公开可见的社交媒体信息）；  
